# marina-my

./: .editorconfig  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc  .stylelintrc.cjs  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.preload.json  tsconfig.web.json  vitest.config.ts
docs/: Linux安装指南-20260517.md  UI设计系统审计备忘录-20260514.md  beta反馈工单库-20260515.md  beta测试收集到的问题.md  ch2勘误.md  cp3勘误.md  explorer-集成-工作记录-20260512.md  ipc-protocol.md  known-issues.md  milestone-1-内部上线待办.md  prelease前勘误 - 第二轮.md  robustness-pass-工作记录-20260513.md  win11-新菜单-验证与UX指南-20260512.md  会话状态检测-讨论备忘录-20260512.md  前端代码质量审计-20260514.md  后端代码审计备忘录-20260514.md  开发报告.md  开发记录-总览.md  打包安装审计备忘录-20260514.md  方案-BETA-003-Linux支持-20260517.md  方案-SSH-完整支持-20260524.md  终端渲染审计备忘录-20260513.md  设计哲学-核心洞见-20260514.md  软件定义书.md  键盘交互规范.md
docs/checkpoints/: .gitkeep  CP-1-self-test.md  CP-1-user-test-guide.md  CP-2-self-test.md  CP-2-user-test-guide.md  CP-3-self-test.md  CP-3-user-test-guide.md  CP-4-self-test.md  CP-4-user-test-guide.md  beta-feedback-20260515-test-guide.md  (+2 more)
native/context-menu/: .gitignore  Cargo.toml  README.md
native/context-menu/package/: AppxManifest.xml
native/context-menu/scripts/: build.ps1  dev-cert.ps1  install.ps1
native/context-menu/src/: command.rs  factory.rs  guid.rs  lib.rs
scripts/: generate-icon.cjs  install-context-menu.ps1  repro-cursor-1.mjs  smoke-interactive.mjs  smoke-launch.mjs  uninstall-context-menu.ps1
(+114 files in other folders)
