[package]
name = "marina_context_menu"
version = "0.1.0"
edition = "2021"
publish = false
description = "Marina Explorer IExplorerCommand DLL (Win11 modern context menu)"

[lib]
crate-type = ["cdylib"]
name = "marina_context_menu"

# Sparse Package 的 Executable 字段必须指向一个真实存在的 .exe(MakeAppx 强校验),
# 哪怕 Sparse 模式下它永远不会被 Windows 启动(因为我们只走 IExplorerCommand 入口)。
# 这个 stub 进程的 main 立即 exit(0),编译后 ~10KB,跟着 DLL 一起进 staging。
[[bin]]
name = "marina-context-menu-host"
path = "src/bin/host.rs"

[dependencies]
windows-core = "0.62"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_Globalization",
  "Win32_Security",
  "Win32_Storage_FileSystem",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
